--- a/InternationalizationSample/InternationalizationSample/Main.storyboard
+++ b/InternationalizationSample/InternationalizationSample/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9WE-dN-mzU">
-    <device id="ipad12_9rounded" orientation="portrait">
+    <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,18 +15,18 @@
             <objects>
                 <viewController id="9WE-dN-mzU" customClass="FSViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Nce-qH-ZAN">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ForeSee_logo" translatesAutoresizingMaskIntoConstraints="NO" id="JnM-SK-dkT">
-                                <rect key="frame" x="477" y="74" width="70" height="70"/>
+                                <rect key="frame" x="172" y="94" width="70" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="N7U-b1-e7Y"/>
                                     <constraint firstAttribute="width" constant="70" id="R4L-NV-23Y"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gnM-t0-Ivs">
-                                <rect key="frame" x="20" y="164" width="984" height="216.5"/>
+                                <rect key="frame" x="20" y="184" width="374" height="216.66666666666663"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="216.5" id="x3G-9p-QsC"/>
@@ -42,36 +42,60 @@ Have a look at Localizable.strings to see the definitions for the invite text
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MHR-gs-JmW">
-                                <rect key="frame" x="20" y="364" width="984" height="30"/>
+                                <rect key="frame" x="20" y="384" width="374" height="30"/>
                                 <color key="backgroundColor" red="0.92156862750000001" green="0.16862745100000001" blue="0.23921568630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Check Eligibility"/>
                                 <connections>
-                                    <action selector="triggerInvite:" destination="9WE-dN-mzU" eventType="touchUpInside" id="OJg-ne-rD5"/>
+                                    <action selector="checkEligibility:" destination="9WE-dN-mzU" eventType="touchUpInside" id="U3q-1v-C6L"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ax8-wR-82E">
+                                <rect key="frame" x="20" y="434" width="374" height="30"/>
+                                <color key="backgroundColor" red="0.92156862750000001" green="0.16862745100000001" blue="0.23921568630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Reset State"/>
+                                <connections>
+                                    <action selector="resetState:" destination="9WE-dN-mzU" eventType="touchUpInside" id="Zkm-73-fEU"/>
+                                </connections>
+                            </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Azs-AM-Bh6">
+                                <rect key="frame" x="20" y="483" width="374" height="200"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="250" constant="200" id="Lqg-8L-Cpo"/>
+                                </constraints>
+                                <string key="text">Once the invite is shown, the SDK drops into an idle state until the repeat days have elapsed. Click here to reset the state of the SDK.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="JnM-SK-dkT" firstAttribute="centerX" secondItem="2Zx-h9-a4T" secondAttribute="centerX" id="6YK-Iz-xLM"/>
                             <constraint firstItem="gnM-t0-Ivs" firstAttribute="top" secondItem="JnM-SK-dkT" secondAttribute="bottom" constant="20" id="AsF-rn-sXi"/>
+                            <constraint firstItem="Azs-AM-Bh6" firstAttribute="leading" secondItem="2Zx-h9-a4T" secondAttribute="leading" constant="20" id="CcR-Ap-Dr7"/>
+                            <constraint firstItem="Ax8-wR-82E" firstAttribute="top" secondItem="MHR-gs-JmW" secondAttribute="bottom" constant="20" id="EM9-7c-Ram"/>
                             <constraint firstItem="gnM-t0-Ivs" firstAttribute="leading" secondItem="2Zx-h9-a4T" secondAttribute="leading" constant="20" id="FDw-eQ-I19"/>
+                            <constraint firstItem="2Zx-h9-a4T" firstAttribute="trailing" secondItem="Azs-AM-Bh6" secondAttribute="trailing" constant="20" id="MY7-4K-u8a"/>
                             <constraint firstItem="gnM-t0-Ivs" firstAttribute="centerX" secondItem="2Zx-h9-a4T" secondAttribute="centerX" id="To6-DF-sVW"/>
                             <constraint firstItem="MHR-gs-JmW" firstAttribute="leading" secondItem="2Zx-h9-a4T" secondAttribute="leading" constant="20" id="VTK-KS-rnc"/>
+                            <constraint firstItem="Ax8-wR-82E" firstAttribute="leading" secondItem="2Zx-h9-a4T" secondAttribute="leading" constant="20" id="XKO-i3-WDr"/>
                             <constraint firstItem="JnM-SK-dkT" firstAttribute="top" secondItem="2Zx-h9-a4T" secondAttribute="top" constant="50" id="bjr-m8-46S"/>
                             <constraint firstItem="MHR-gs-JmW" firstAttribute="trailing" secondItem="2Zx-h9-a4T" secondAttribute="trailing" constant="-20" id="d75-we-ph3"/>
                             <constraint firstItem="MHR-gs-JmW" firstAttribute="top" secondItem="gnM-t0-Ivs" secondAttribute="bottom" constant="-16.5" id="fqt-Hj-Jwh"/>
                             <constraint firstItem="gnM-t0-Ivs" firstAttribute="trailing" secondItem="2Zx-h9-a4T" secondAttribute="trailing" constant="-20" id="kR1-IC-veo"/>
+                            <constraint firstItem="Azs-AM-Bh6" firstAttribute="top" secondItem="Ax8-wR-82E" secondAttribute="bottom" constant="19" id="niE-s5-zJN"/>
+                            <constraint firstItem="2Zx-h9-a4T" firstAttribute="trailing" secondItem="Ax8-wR-82E" secondAttribute="trailing" constant="20" id="z8g-NO-52W"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2Zx-h9-a4T"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Azg-fI-V3T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-158" y="-216"/>
+            <point key="canvasLocation" x="-159.42028985507247" y="-216.29464285714286"/>
         </scene>
     </scenes>
     <resources>
-        <image name="ForeSee_logo" width="200" height="200"/>
+        <image name="ForeSee_logo" width="100" height="100"/>
     </resources>
 </document>
